--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 @tailwind base;
 @tailwind components;
+@tailwind utilities;
+
+
+@font-face{
+    font-family: 'manrope';
+    src: url('Manrope/static/Manrope-Regular.ttf');
+}
+
 html{
     scroll-behavior: smooth
 }
-@tailwind utilities;
 
+.myfont{
+    font-family: manrope;
+}
