--- a/style.css
+++ b/style.css
@@ -15,3 +15,7 @@ html{
 .myfont{
     font-family: manrope;
 }
+
+.card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adjust values for desired shadow effect */
+}
